# sdr

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  latest  pyproject.toml  requirements-dev.txt  versions.json
.github/workflows/: build.yaml  docs.yaml  lint.yaml  release.yaml  test.yaml
docs/: .gitignore  api.rst  conf.py  index.rst  requirements.txt
docs/_static/: extra.css
docs/_templates/: base.html
docs/api/: coding.rst  conversions.rst  detection.rst  dsp.rst  estimation.rst  link-budgets.rst  measurement.rst  modulation.rst  plotting.rst  sequences.rst  synchronization.rst
docs/examples/: coherent-integration.ipynb  farrow-resampler.ipynb  fir-filters.ipynb  iir-filter.ipynb  iir-filters.ipynb  non-coherent-integration.ipynb  peak-to-average-power.ipynb  phase-locked-loop.ipynb  psk.ipynb  pulse-shapes.ipynb  raised-cosine-pulse.ipynb
docs/release-notes/: v0.0.md
src/sdr/: __init__.py  _capacity.py  _channel_model.py  _constants.py  _conversion.py  _data.py  _diff_code.py  _farrow.py  _fir_filter.py  _gray.py  _helper.py  _iir.py  _iir_filter.py  _impairment.py  _link_budget.py  _loop_filter.py  _measurement.py  _nco.py  _pll.py  _probability.py  _psk.py  _pulse_shape.py  _sequence.py  _signal.py  _snr.py
tests/: test_dds.py  test_farrow_resampler.py  test_fir_filter.py  test_iir_filter.py  test_loop_filter.py  test_nco.py  test_packing.py  test_pulse_shape.py  test_root_raised_cosine.py  test_verify.py
tests/chnnael_models/: test_bec.py  test_bsc.py
tests/coding/: test_additive_scrambler.py  test_block_interleaver.py  test_interleaver.py
tests/conversions/: test_ebn0_to_esn0.py  test_ebn0_to_snr.py  test_esn0_to_ebn0.py  test_esn0_to_snr.py  test_percent.py  test_ppb.py  test_ppm.py  test_snr_to_ebn0.py  test_snr_to_esn0.py
tests/data_manipulation/: test_hexdump.py  test_pack.py  test_unpack.py
tests/detection/: test_albersheim.py  test_coherent_gain.py  test_coherent_gain_loss.py  test_h0_h1_theory.py  test_h0_theory.py  test_h1_theory.py  test_max_frequency_offset.py  test_max_integration_time.py  test_non_coherent_gain.py  test_p_d.py  test_p_fa.py  test_peebles.py  test_shnidman.py  test_threshold.py
tests/dsp/: test_decimator.py  test_design_bandpass_fir.py  test_downsample.py  test_farrow.py  test_fir.py  test_fir_interpolator.py  test_iir.py  test_interpolator.py  test_local_oscillator.py  test_mix.py  test_multirate_fir.py  test_multirate_taps.py  test_resampler.py  test_sinusoid.py  test_to_complex_baseband.py  test_to_complex_bb.py  test_to_real_passband.py  test_to_real_pb.py  test_upsample.py
tests/estimation/: test_composite_snr.py  test_fdoa_crlb.py  test_foa_crlb.py  test_tdoa_crlb.py  test_toa_crlb.py
tests/filters/: test_fir.py  test_fir_interpolator.py  test_iir.py
tests/impairments/: test_awgn.py
tests/link_budgets/: test_awgn_capacity.py  test_bec_capacity.py  test_biawgn_capacity.py  test_bsc_capacity.py  test_coherent_gain_loss.py  test_free_space_path_loss.py  test_fspl.py  test_max_integration_time.py  test_shannon_limit_ebn0.py  test_shannon_limit_snr.py
tests/measurements/: test_crest_factor.py  test_energy.py  test_error_rate.py  test_euclidean.py  test_evm.py  test_hamming.py  test_iq_imbalance.py  test_papr.py  test_power.py  test_rms_bandwidth.py  test_rms_integration_time.py  test_voltage.py
tests/modulation/: test_binary_code.py  test_diff_decode.py  test_diff_encode.py  test_gaussian.py  test_gray_code.py  test_half_sine.py  test_psk.py  test_psk_ber.py  test_psk_ser.py  test_raised_cosine.py  test_rectangular.py  test_root_raised_cosine.py
tests/phase_locked_loops/: test_nco.py
tests/plot/: test_plot.py
tests/probability/: test_add_distribution.py  test_add_iid_rvs.py  test_add_rvs.py  test_max_distribution.py  test_max_iid_rvs.py  test_max_rvs.py  test_min_distribution.py  test_min_iid_rvs.py  test_min_rvs.py  test_multiply_distribution.py  test_multiply_rvs.py  test_normal.py  test_subtract_rvs.py  test_sum_distribution.py  test_sum_distributions.py
tests/pulse_shapes/: test_gaussian.py  test_raised_cosine.py  test_root_raised_cosine.py
tests/resamplers/: test_farrow.py
tests/sequences/: test_barker.py  test_barker_code.py  test_conversion.py  test_flfsr.py  test_glfsr.py  test_gold_code.py  test_hadamard.py  test_hadamard_code.py  test_is_preferred_pair.py  test_kasami_code.py  test_m_sequence.py  test_preferred_pairs.py  test_walsh.py  test_walsh_code.py  test_zadoff_chu.py
tests/simulation/: test_BinaryErasureChannel.py  test_BinarySymmetricChannel.py  test_DiscreteMemorylessChannel.py  test_awgn.py  test_bec.py  test_bsc.py  test_clock_error.py  (+4 more)
v0.0.0/: .buildinfo  index.html  searchindex.js
v0.0.1/: objects.inv  searchindex.js
v0.0.10/: objects.inv  searchindex.js  sitemap.xml
v0.0.11/: objects.inv  searchindex.js
v0.0.12/: searchindex.js  sitemap.xml
v0.0.13/: objects.inv  searchindex.js
v0.0.14/: objects.inv  searchindex.js
v0.0.15/: searchindex.js
v0.0.16/: .buildinfo  searchindex.js
v0.0.17/: objects.inv  searchindex.js
v0.0.18/: searchindex.js
v0.0.19/: objects.inv  searchindex.js
v0.0.2/: index.html
v0.0.20/: index.html  objects.inv  searchindex.js
v0.0.21/: .buildinfo  objects.inv  searchindex.js
v0.0.22/: objects.inv  searchindex.js  sitemap.xml
v0.0.23/: searchindex.js
v0.0.24/: searchindex.js
v0.0.25/: objects.inv  searchindex.js
v0.0.26/: index.html  searchindex.js
v0.0.27/: objects.inv  searchindex.js
v0.0.28/: searchindex.js
v0.0.29/: index.html  searchindex.js  sitemap.xml
v0.0.3/: objects.inv  searchindex.js  sitemap.xml
v0.0.30/: objects.inv  searchindex.js  sitemap.xml
v0.0.4/: index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.5/: objects.inv  searchindex.js
v0.0.6/: index.html  searchindex.js  sitemap.xml
v0.0.7/: index.html  objects.inv  searchindex.js
v0.0.8/: objects.inv  searchindex.js  sitemap.xml
v0.0.9/: index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.x/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
vv0.0.x/: objects.inv
(+8206 files in other folders)
